--- a/webpack/template.html
+++ b/webpack/template.html
@@ -13,10 +13,10 @@
   <body>
     <div id="root">
       <!-- <img
-        src="http://yanxuan.nosdn.127.net/65091eebc48899298171c2eb6696fe27.jpg"
+        src="http://yanxuan.nosdn.127.net/65091eebc48899298171c2eb696fe27.jpg"
         alt=""
       /> -->
     </div>
   </body>
-  <!-- <script src="/error.js"></script> -->
 </html>
+<script src="/error.js"></script>
